docs/api/qiskit/0.41/ibmq_managed.md
---
title: managed
description: API reference for qiskit.providers.ibmq.managed
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.providers.ibmq.managed
---

<Admonition title="Warning" type="caution">
  The package `qiskit-ibmq-provider` is being deprecated and its repo is going to be archived soon. Please transition to the new packages. More information in [https://ibm.biz/provider\_migration\_guide](https://ibm.biz/provider_migration_guide)
</Admonition>

<span id="module-qiskit.providers.ibmq.managed" />

<span id="qiskit-providers-ibmq-managed" />

# Job Manager

<span id="module-qiskit.providers.ibmq.managed" />

`qiskit.providers.ibmq.managed`

High level mechanism for handling jobs.

## Classes

|                                                                                                                                                   |                                         |
| ------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- |
| [`IBMQJobManager`](qiskit.providers.ibmq.managed.IBMQJobManager "qiskit.providers.ibmq.managed.IBMQJobManager")()                                 | Job Manager for IBM Quantum Experience. |
| [`ManagedJobSet`](qiskit.providers.ibmq.managed.ManagedJobSet "qiskit.providers.ibmq.managed.ManagedJobSet")(\[name, short\_id])                  | A set of managed jobs.                  |
| [`ManagedJob`](qiskit.providers.ibmq.managed.ManagedJob "qiskit.providers.ibmq.managed.ManagedJob")(start\_index, experiments\_count\[, job])     | Job managed by the Job Manager.         |
| [`ManagedResults`](qiskit.providers.ibmq.managed.ManagedResults "qiskit.providers.ibmq.managed.ManagedResults")(job\_set, backend\_name, success) | Results managed by the Job Manager.     |

## Exceptions

|                                                                                                                                                                                     |                                                                 |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| [`IBMQJobManagerError`](qiskit.providers.ibmq.managed.IBMQJobManagerError "qiskit.providers.ibmq.managed.IBMQJobManagerError")(\*message)                                           | Base class for errors raise by the Job Manager.                 |
| [`IBMQJobManagerInvalidStateError`](qiskit.providers.ibmq.managed.IBMQJobManagerInvalidStateError "qiskit.providers.ibmq.managed.IBMQJobManagerInvalidStateError")(\*message)       | Errors raised when an operation is invoked in an invalid state. |
| [`IBMQJobManagerTimeoutError`](qiskit.providers.ibmq.managed.IBMQJobManagerTimeoutError "qiskit.providers.ibmq.managed.IBMQJobManagerTimeoutError")(\*message)                      | Errors raised when a Job Manager operation times out.           |
| [`IBMQJobManagerJobNotFound`](qiskit.providers.ibmq.managed.IBMQJobManagerJobNotFound "qiskit.providers.ibmq.managed.IBMQJobManagerJobNotFound")(\*message)                         | Errors raised when a job cannot be found.                       |
| [`IBMQManagedResultDataNotAvailable`](qiskit.providers.ibmq.managed.IBMQManagedResultDataNotAvailable "qiskit.providers.ibmq.managed.IBMQManagedResultDataNotAvailable")(\*message) | Errors raised when result data is not available.                |
| [`IBMQJobManagerUnknownJobSet`](qiskit.providers.ibmq.managed.IBMQJobManagerUnknownJobSet "qiskit.providers.ibmq.managed.IBMQJobManagerUnknownJobSet")(\*message)                   | Errors raised when the job set ID is unknown.                   |

